# Open-table-format

./: .env  .gitginore  AGENTS.md  Makefile  README.md  catalog.db  docker-compose.yml  pyproject.toml  개요.md
data/: custom_ns.parquet  custom_us.parquet  events_us.parquet  step1_events_ns.parquet
scripts/: bootstrap_minio.py  dev_tasks.py  e2e_check.py
src/open_table_format/: __init__.py  app.py  cli.py  iceber_ops.py
tests/: test_e2e.py  test_parquet_precision.py
warehouse/db/events/data/: 00000-0-1a308b02-f693-48e2-ad6a-99f48be14ac2.parquet
warehouse/db/events/metadata/: 00000-15b902e2-b1d2-481f-be9d-0b197d06efd3.metadata.json  00000-d020be89-f9e7-46e9-b0d6-c68719d22989.metadata.json  00001-396339d2-a21e-4422-8695-cb4754813da8.metadata.json  00001-cfddba1b-9717-4d71-be79-2064109b6a02.metadata.json  00002-9939a907-6f56-443b-b3c7-6fe0e984347b.metadata.json  00002-dadb80ac-7723-4f1d-a316-ace6e554d88c.metadata.json  00003-251f64c7-837e-4a37-b181-f72707c3f16f.metadata.json  00003-47be474d-0cb2-47a7-b1cb-fca7a4093437.metadata.json  00004-290a1fe8-be98-4785-92f5-abdfde8415f9.metadata.json  00004-5a80b852-9e06-4424-91a0-deac9988bacc.metadata.json  00005-add06cc5-95e6-4a78-8b1d-93ff350993a1.metadata.json  00005-cf99a208-9b40-4e1b-84c5-10ec44d9143a.metadata.json  00006-b3bcff87-26e9-462a-9209-f5b189293f9f.metadata.json  00006-eef81397-ed22-46e9-89ae-db248d25324d.metadata.json  0c97ef92-1b19-43af-a663-7b497ee08ee4-m0.avro  1a308b02-f693-48e2-ad6a-99f48be14ac2-m0.avro  1c7ed6ed-720d-4ceb-b60b-dbe61fc11857-m0.avro  25b2607a-ccce-4296-8b0e-0c1d5b78dd7c-m0.avro  (+27 more)
(+14 files in other folders)
